# github_action_test

./: main.py  pyproject.toml
.github/workflows/: main.yml
test/: test_capital_case.py
