[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["xenups <xenups@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.87.0"
uvicorn = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
